cabal-version:      3.0
name:               tracing
version:            0.0.7.2
synopsis:           Distributed tracing
description:
  An OpenTracing-compliant, simple, and extensible distributed tracing library.

category:           Web
homepage:           https://github.com/mtth/tracing
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthieu Monsch
maintainer:         mtth@apache.org
copyright:          2020 Matthieu Monsch
build-type:         Simple
extra-source-files: README.md
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.4 || ==9.8.2

source-repository head
  type:     git
  location: https://github.com/scrive/tracing

library
  hs-source-dirs:   src
  exposed-modules:
    Control.Monad.Trace
    Control.Monad.Trace.Class
    Monitor.Tracing
    Monitor.Tracing.Local
    Monitor.Tracing.Zipkin

  other-modules:    Control.Monad.Trace.Internal
  build-depends:
    , aeson              <=2.3
    , base               <5
    , base16-bytestring  <=1.1
    , bytestring         <=0.13
    , case-insensitive   <=1.3
    , containers         <=0.7
    , exceptions         <=0.11
    , http-client        <=0.8
    , lifted-base        <=0.3
    , monad-control      <=1.1
    , mtl                <=2.3.1
    , network            <=3.2
    , random             <=1.3
    , stm                <=2.6
    , text               <=2.1.1
    , time               <=1.13
    , transformers       <=0.6.1.0
    , transformers-base  <=0.5

  ghc-options:      -Wall
  default-language: Haskell2010

test-suite tracing-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    , base
    , containers
    , hspec          >=2.6
    , lifted-base    >=0.2.3
    , monad-control  >=1.0
    , mtl
    , stm
    , text
    , tracing

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N4
  default-language: Haskell2010
