cabal-version:      3.0
name:               tracing
version:            1.0.0.0
synopsis:           Distributed tracing
description:
  An OpenTracing-compliant, simple, and extensible distributed tracing library.

category:           Web
homepage:           https://github.com/mtth/tracing
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthieu Monsch
maintainer:         mtth@apache.org
copyright:          2020 Matthieu Monsch
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.2, 9.10.1 }

source-repository head
  type:     git
  location: https://github.com/scrive/tracing

library
  hs-source-dirs:   src
  exposed-modules:
    Control.Monad.Trace
    Control.Monad.Trace.Class
    Monitor.Tracing
    Monitor.Tracing.Local
    Monitor.Tracing.Zipkin

  other-modules:    Control.Monad.Trace.Internal
  build-depends:
      aeson >= 2.0
    , base >= 4.14 && < 5
    , base16-bytestring >= 1.0
    , bytestring >= 0.10
    , case-insensitive >= 1.2
    , containers >= 0.6
    , exceptions >= 0.10
    , http-client >= 0.5
    , lifted-base >= 0.2.3
    , monad-control >= 1.0
    , mtl >= 2.2
    , network >= 2.8
    , random >= 1.1
    , stm >= 2.5
    , text >= 1.2
    , time >= 1.8
    , transformers >= 0.5
    , transformers-base >= 0.4

  ghc-options:      -Wall
  default-language: Haskell2010

test-suite tracing-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    , base
    , containers
    , hspec          >=2.6
    , lifted-base    >=0.2.3
    , monad-control  >=1.0
    , mtl
    , stm
    , text
    , tracing

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N4
  default-language: Haskell2010
